<resources>
    <string name="app_name">Vamos Rachar !</string>
    <string name="t1">Vamos</string>
    <string name="t2">Rachar !</string>
    <string name="t3">R$</string>
    <string name="dica_valor">0.00</string>
    <string name="dica_pessoas">2</string>
    <string name="parcela">0.00</string>
    <string name="descricao_pessoas">Quantidade de pessoas a dividir a conta</string>
    <string name="mais">Acrescenta pessoas</string>
    <string name="menos">Decremente pessoas</string>
</resources>