<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#9628B4"
        android:id="@+id/constraintLayout">

    <TextView
            android:text="@string/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="42sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/resultadoTextView"/>

    <TextView
            android:text="@string/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="48sp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"/>

    <TextView
            android:text="@string/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="48sp"/>

    <TextView
            android:text="@string/t3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="42sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/totalEditText"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="32dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:inputType="numberDecimal"
            android:id="@+id/totalEditText"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="42sp"
            android:hint="@string/dica_valor"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            android:importantForAutofill="no"
            android:ems="5"/>

    <ImageView
            android:layout_width="70sp"
            android:layout_height="70sp"
            app:srcCompat="@drawable/ic_pessoas_foreground"
            android:id="@+id/pessoasImageView"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            android:contentDescription="@string/descricao_pessoas"
            app:layout_constraintTop_toTopOf="@+id/pessoasTextView"/>

    <TextView
            android:text="@string/parcela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultadoTextView"
            android:textSize="48sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/pessoasTextView"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/totalEditText"
            app:layout_constraintStart_toStartOf="@+id/totalEditText"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_share"
            android:id="@+id/compartilharFButton"
            app:layout_constraintTop_toBottomOf="@+id/resultadoTextView"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/lerFButton"
            app:fabSize="normal"
            app:maxImageSize="36dp"
            android:backgroundTint="#961496"
            app:fabCustomSize="70dp"
            android:tint="#FFFFFF"
            app:rippleColor="#CC961496"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
            android:id="@+id/lerFButton"
            app:layout_constraintTop_toBottomOf="@+id/resultadoTextView"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toEndOf="@+id/compartilharFButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:maxImageSize="36dp"
            app:fabCustomSize="70dp"
            app:fabSize="auto"
            android:backgroundTint="#961496"
            android:tint="#FFFFFF"
            app:rippleColor="#CC961496"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/arrow_down_float"
            android:id="@+id/menosButton"
            app:layout_constraintEnd_toEndOf="@+id/maisButton"
            android:layout_marginTop="9dp"
            app:layout_constraintTop_toBottomOf="@+id/maisButton"
            android:contentDescription="@string/menos"/>

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/arrow_up_float"
            android:id="@+id/maisButton"
            app:layout_constraintEnd_toEndOf="@+id/totalEditText"
            app:layout_constraintTop_toTopOf="@+id/pessoasTextView"
            android:contentDescription="@string/mais"/>

    <TextView
            android:text="@string/dica_pessoas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pessoasTextView"
            android:textSize="48sp"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/totalEditText"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/totalEditText"
            app:layout_constraintStart_toStartOf="@+id/totalEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>